Add error state

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "npm": "5.3"
   },
   "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server",
+    "start": "NODE_ENV=development webpack-dev-server && webpack -w",
     "package": "NODE_ENV=production webpack",
     "test": "jest",
     "prettier": "prettier --list-different --parser typescript src/**/*.{ts,js,tsx} test/**/*.{ts,js,tsx}"
@@ -34,24 +34,16 @@
     ]
   },
   "dependencies": {
-    "@octokit/rest": "^15.13.0",
     "@types/axios": "^0.14.0",
     "@types/classnames": "2.2.0",
-    "@types/date-fns": "^2.6.0",
-    "@types/flat": "0.0.28",
-    "@types/inquirer": "0.0.34",
     "@types/jest": "20.0.8",
-    "@types/jsonwebtoken": "7.2.0",
-    "@types/lodash": "4.14.62",
     "@types/moxios": "0.4.5",
     "@types/node": "7.0.13",
-    "@types/qs": "6.2.31",
     "@types/react": "16.0.5",
     "@types/react-dom": "15.5.4",
+    "@types/react-flip-move": "^2.9.12",
     "@types/react-modal": "2.2.1",
     "@types/react-redux": "5.0.5",
-    "@types/react-tooltip": "^3.3.0",
-    "@types/react-transition-group": "^2.0.6",
     "@types/redux": "3.6.0",
     "@types/webpack-env": "1.13.0",
     "autoprefixer": "7.1.1",
@@ -59,16 +51,7 @@
     "axios": "^0.16.1",
     "classnames": "2.2.5",
     "css-loader": "0.28.0",
-    "date-fns": "^1.28.5",
-    "enzyme": "2.8.2",
-    "enzyme-to-json": "1.5.1",
-    "flat": "4.0.0",
-    "identity-obj-proxy": "3.0.0",
-    "inquirer": "3.0.6",
     "jest": "20.0.1",
-    "jsonwebtoken": "7.3.0",
-    "lodash": "4.17.5",
-    "moxios": "0.4.0",
     "postcss": "6.0.1",
     "postcss-calc": "^6.0.0",
     "postcss-loader": "2.0.5",
@@ -81,9 +64,6 @@
     "react-hot-loader": "3.0.0-beta.6",
     "react-modal": "2.2.4",
     "react-redux": "5.0.5",
-    "react-test-renderer": "15.5.4",
-    "react-tooltip": "^3.3.0",
-    "react-transition-group": "^2.2.1",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
     "style-loader": "0.18.1",
